--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" class="perfect-scrollbar-off nav-open">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6SHYTDBZJ2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-6SHYTDBZJ2');
+    </script>
     <meta charset="utf-8" />
     <meta
       name="viewport"
